# DSW2

./: CMakeLists.txt  CoursesManager2.cpp  CoursesManager2.h  HashTable.cpp  HashTable.h  Lecture.h  O1ArrayInit.h  ProjectMockup.cpp  ProjectMockup.h  RankTree.h  SearchTree.h  StressTest.py  TimeCheck.cpp  array.h  double_linked_list.h  generic_test_for_something_old.cpp  library2.cpp  simple_array_test.cpp  test.cpp  testCM.cpp  testDS.cpp  testHT.cpp  testHT.h  wet2ds.docx  ~$wet2ds.docx  ~WRL0005.tmp
segelTests/: hodoutput1.txt  in1.txtnew  in10.txtnew  in2.txtnew  in3.txtnew  in4.txtnew  in5.txtnew  in6.txtnew  in7.txtnew  in8.txtnew  in9.txtnew  out10.txt  out2.txt  out3R.txt  out4.txt  out5.txt  out6.txt  out7R.txt  out8R.txt  out9.txt
